now connects to Koyo DL06
git-svn-id: http://svn.jemian.org/svn/regitte/EPICS@1899 4ca16b70-4e1b-0410-88e2-31485261bf7f

--- a/ioc/morel/trunk/morelApp/src/Makefile
+++ b/ioc/morel/trunk/morelApp/src/Makefile
@@ -163,6 +163,10 @@ ifneq (,$(findstring linux, $(T_A)))
 	ifdef DEVIOCSTATS
 		iocmorelLinux_DBD += devIocStats.dbd iocAdmin.dbd
 	endif
+
+	iocmorelLinux_DBD += modbus.dbd modbusSupport.dbd
+	morel_LIBS_Linux += modbus
+
 endif
 
 ifeq ($(OS_CLASS), solaris)
